tests/parser/bad/type_t-cid-underscore.scilla
scilla_version 0

library TestLib
(* underscore is not a valid argument *)
let f = fun (x : Option _) => x

contract Test
()
